--- a/wk2_xaringan.html
+++ b/wk2_xaringan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Are we ready to meet LiDAR &amp; RADAR?</title>
+    <title>Are we ready to meet LiDAR?</title>
     <meta charset="utf-8" />
     <meta name="author" content="Eunyoung Choi" />
     <script src="libs/header-attrs-2.19/header-attrs.js"></script>
@@ -15,19 +15,19 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Are we ready to meet LiDAR &amp; RADAR?
+# Are we ready to meet LiDAR?
 ]
 .subtitle[
-## <br/>with xaringan
+## CASA0023 Week2
 ]
 .author[
 ### Eunyoung Choi
 ]
 .institute[
-### CASA0023 Week 2
+### UCL USS
 ]
 .date[
-### 2023/01/17 (updated: 2023-02-06)
+### 2023/01/17 (updated: 2023-02-25)
 ]
 
 ---
@@ -37,98 +37,77 @@ class: center, middle, inverse, title-slide
 
 class: inverse, center, middle
 
-# Hello LiDAR (feat.RADAR) ✋
+# Hello LiDAR (FEAT.RADAR) ✋
 
 ---
 
 # Summary
 
-
 ## LiDAR
-
-* **Light** Detection And Ranging
+ * **Light** Detection And Ranging
  * to measure and scan the return time by emitting millions of laser pulses per second
  * to create high-resolution models of ground elevation with a vertical accuracy of 10cm
-* Usually compared with RADAR 
+
+&lt;img src="images/960x0.jpg" width="55%" style="display: block; margin: auto;" /&gt;
+.center[LiDAR sensor image. [Source:Forbes](https://www.forbes.com/sites/sabbirrangwala/2020/04/12/there-must-be-860-ways-to-build-an-av-lidarpart-1/?sh=48144d69545c)]  
+
+---
+
+# Summary
+
+## LiDAR
+.pull-left[
+* High precision 
+* Measure elevation and orientation accurately
+* Detect temperature and object 
+* Scan surroundings at night
+]
+ 
+.pull-right[ 
+* High power consumption
+* Not suitable for extensive navigation due to sensor limitations
+* Highly influenced by the environment (e.g. humidity, snow, rain, fog etc.)
+]
 
 
 ## RADAR
  * **RAdio** Detection And Ranging
  * to determine the distance, angle of objects relative to the site using radio waves
-
-
-## Both are used complementarily!
----
-
-# Summary
-
-.pull-left[
-* LiDAR can 
- * High precision 
- * Measure elevation and orientation accurately
- * Detect temperature and object 
- * Scan surroundings at night
- 
-&lt;img src="960x0.jpg" width="85%" style="display: block; margin: auto;" /&gt;
-.center[LiDAR sensor image. [Source:Forbes](https://www.forbes.com/sites/sabbirrangwala/2020/04/12/there-must-be-860-ways-to-build-an-av-lidarpart-1/?sh=48144d69545c)]  
-]
-
-.pull-right[
-* Compared to RADAR, LiDAR is...
- * High power consumption
- * not suitable for extensive navigation due to sensor limitations
- * Highly influenced by the environment (e.g. humidity, snow, rain, fog etc.)
-]
+ * LiDAR and RADAR are used complementarily!
 
 ---
 
 # Application
 
-* **LiDAR**
+## LiDAR
  * Mounted on aircraft or satellites for precise geographical and environmental observations
  * a crackdown on motor vehicle speed violations
  * Laser scanner for 3D image restoration
  * 3D image sensor for driverless vehicles
 
-* **RADAR**
+## RADAR
  * Detects aircraft, ships, spacecraft, miles, cars, and terrain
  * Finding the depth of the deep sea 
  * Used for weather observation, emergency braking devices of vehicles and rear detection system
 
-* **Both** are most recently used in **self-driving car technology** 🚗
+#### **Both** are most recently used in **self-driving car technology** 🚗
 
 ---
 
 # Reflection 
 
-.pull-left[
+* Learning Lidar as one of the remote sensing data measuring devices, I was surprised as **we use cutting-edge technology in our daily lives.** For example, I thought it was used only for aerial photography, but even radio waves are used in microwave ovens!
 
-]
-* Learning Lidar as one of the remote sensing data measuring devices, I was surprised as we use cutting-edge technology in our daily lives. For example, I thought it was used only for aerial photography, but even radio waves are used in microwave ovens!
+* I am looking forward to how this technology, which is currently the core of autonomous vehicle development, will change our future. And I wish this technology could use as **a solution for climate change.**
 
-* I am looking forward to how this technology, which is currently the core of autonomous vehicle development, will change our future. And I wish this technology could use as a solution for climate change.
-
-.pull-right[]
-&lt;img src="6c6a37ee9787cc1585c5ce466b50f9da.gif" width="55%" style="display: block; margin: auto;" /&gt;
+&lt;img src="images/6c6a37ee9787cc1585c5ce466b50f9da.gif" width="55%" style="display: block; margin: auto;" /&gt;
 .center[[Source:Pinterest](https://www.pinterest.com/pin/93590498485503110/)]  
-]
 
 ---
 
 # Reference
 
-* ScienceNewsExplores (2023). Explainer: What are lidar, radar and sonar?-Three similar technologies rely on echoes to map the unseen. [Online]. [Accessed 2023]. Available from: https://www.snexplores.org/article/explainer-what-are-lidar-radar-and-sonar
-
-* USGS science for a changing world (2023). What is Lidar data and where can I download it?. [Online]. [Accessed 2023]. Available from: https://www.usgs.gov/faqs/what-lidar-data-and-where-can-i-download-it
-
-
-```
-## You haven't cited any references in this bibliography yet.
-```
-
 NULL
-
-&lt;a name=cite-gohring_radarlidar_2011&gt;&lt;/a&gt;([Göhring, Wang, Schnürmacher, and Ganjineh, 2011](#bib-gohring_radarlidar_2011))
 
 ---
 
