fix the reference error

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ class: center, middle, inverse, title-slide
 ### UCL USS
 ]
 .date[
-### 2023/01/17 (updated: 2023-03-05)
+### 2023/01/17 (updated: 2023-03-23)
 ]
 
 ---
@@ -75,6 +75,8 @@ class: inverse, center, middle
  * to determine the distance, angle of objects relative to the site using radio waves
  * LiDAR and RADAR are used complementarily!
 
+Source: &lt;a name=cite-gohring2011&gt;&lt;/a&gt;[Göhring, Wang, Schnürmacher, and Ganjineh (2011)](#bib-gohring2011)
+
 ---
 
 # Application
@@ -91,6 +93,7 @@ class: inverse, center, middle
  * Used for weather observation, emergency braking devices of vehicles and rear detection system
 
 #### **Both** are most recently used in **self-driving car technology** 🚗
+Source : &lt;a name=cite-campbell2018&gt;&lt;/a&gt;[Campbell, O'Mahony, Krpalcova, Riordan, Walsh, Murphy, and Ryan (2018)](#bib-campbell2018)
 
 ---
 
@@ -104,10 +107,23 @@ class: inverse, center, middle
 .center[[Source:Pinterest](https://www.pinterest.com/pin/93590498485503110/)]  
 
 ---
-
 # Reference
 
-NULL
+&lt;a name=bib-campbell2018&gt;&lt;/a&gt;[Campbell, S., N. O'Mahony, L. Krpalcova,
+et al.](#cite-campbell2018) (2018). "Sensor Technology in Autonomous
+Vehicles : A Review". In: _2018 29th Irish Signals and Systems
+Conference (ISSC)_. 2018 29th Irish Signals and Systems Conference
+(ISSC). , pp. 1-4.
+
+&lt;a name=bib-gohring2011&gt;&lt;/a&gt;[Göhring, D., M. Wang, M. Schnürmacher, et
+al.](#cite-gohring2011) (2011). "Radar/Lidar Sensor Fusion for
+Car-Following on Highways". In: _The 5th International Conference on
+Automation, Robotics and Applications_. The 5th International
+Conference on Automation, Robotics and Applications. , pp. 407-412.
+
+Bridges,A. 2015. Explainer: What are lidar, radar and sonar?. [Online]. [Accessed 1 May 2015]. Available from: https://www.snexplores.org/article/explainer-what-are-lidar-radar-and-sonar
+
+USGS science for a changing world. 2023. What is Lidar data and where can I download it?. [Online]. [Accessed 23 March 2023]. Available from: https://www.usgs.gov/faqs/what-lidar-data-and-where-can-i-download-it
 
 ---
 
